--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,3 +2,25 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -g default-terminal "screen-256color"
 
+# Remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# Split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind '%'
+
+# Switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Enable mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
+
+# Don't remove windows automatically
+set-option -g allow-rename off
