feat(tmux): add addition configuration
Add additional configuration in line with what Josean Martinez has.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,16 +8,37 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # Split panes using | and -
-bind | split-window -h
-bind - split-window -v
 unbind '"'
+bind | split-window -h
 unbind '%'
+bind - split-window -v
+
+# Refresh the tmux configuration
+unbind r
+bind r source-file ~/.tmux.conf
+
+# Resize panes using Vim keys
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
 
 # Switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# Maximize a pane
+bind -r m resize-pane -Z
+
+# Vim keys in copy mode (<prefix> + [)
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+
+# Use mouse to drag selections
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
@@ -36,3 +57,17 @@ bind-key -n M-6 select-window -t 6
 bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restarts
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically save session every 15 minutes
+
+set -g @themepack 'powerline/default/cyan'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore  'on'
+
+# Initialize TMUX plugin manager (must be at the bottom of the file)
+run '~/.tmux/plugins/tmp/tpm'
